--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   percent_indicator: ^4.0.1
   open_file: ^3.2.1
+  yaru: ^0.4.3
+  macos_ui: ^1.7.5
+
+
 
 dev_dependencies:
   flutter_test:
