--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '^3.7.0'
 
 dependencies:
   flutter:
@@ -30,8 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   percent_indicator: ^4.0.1
   open_file: ^3.2.1
-  yaru: ^0.4.3
-  macos_ui: ^1.7.5
+  yaru: ^7.0.0
+  macos_ui: ^2.0.7
 
 
 
@@ -39,7 +39,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
 
